--- a/templates/question/show.html.twig
+++ b/templates/question/show.html.twig
@@ -56,3 +56,8 @@
         </ul>
     </div>
 {% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script src="{{ asset('js/question_show.js') }}"></script>
+{% endblock %}
