--- a/templates/question/homepage.html.twig
+++ b/templates/question/homepage.html.twig
@@ -3,8 +3,8 @@
 {% block body %}
     <div class="jumbotron-img jumbotron jumbotron-fluid">
         <div class="container">
-            <h1 class="display-4">Your Questions Answered</h1>
-            <p class="lead">And even answers for those questions you didn't think to ask!</p>
+            <h1 class="display-4 pt-5">Your Questions Answered</h1>
+            <p class="lead pb-5">And even answers for those questions you didn't think to ask!</p>
         </div>
     </div>
     <div class="container">
@@ -19,14 +19,14 @@
                     <div class="q-container p-4">
                         <div class="row">
                             <div class="col-2 text-center">
-                                <img src="{{ asset('images/tisha.png') }}" width="100" height="100">
+                                <img src="{{ asset('images/tisha.png') }}" width="100" height="100"  alt="Tisha avatar">
                                 <div class="d-block mt-3 vote-arrows">
                                     <a class="vote-up" href="#"><i class="far fa-arrow-alt-circle-up"></i></a>
                                     <a class="vote-down" href="#"><i class="far fa-arrow-alt-circle-down"></i></a>
                                 </div>
                             </div>
                             <div class="col">
-                                <a class="q-title" href="{{ path('app_question_show', { slug: 'reversing-a-spell'}) }}"><h2>Reversing a Spell</h2></a>
+                                <a class="q-title" href="{{ path('app_question_show', { slug: 'reversing-a-spell' }) }}"><h2>Reversing a Spell</h2></a>
                                 <div class="q-display p-3">
                                     <i class="fa fa-quote-left mr-3"></i>
                                     <p class="d-inline">I've been turned into a cat, any thoughts on how to turn back? While I'm adorable, I don't really care for cat food.</p>
@@ -35,7 +35,7 @@
                             </div>
                         </div>
                     </div>
-                    <a class="answer-link" href="#" style="color: #fff;">
+                    <a class="answer-link" href="{{ path('app_question_show', { slug: 'reversing-a-spell' }) }}" style="color: #fff;">
                         <p class="q-display-response text-center p-3">
                             <i class="fa fa-magic magic-wand"></i> 6 answers
                         </p>
@@ -47,14 +47,14 @@
                 <div class="q-container p-4">
                     <div class="row">
                         <div class="col-2 text-center">
-                            <img src="{{ asset('images/magic-photo.png') }}" width="100" height="100">
+                            <img src="{{ asset('images/magic-photo.png') }}" width="100" height="100"  alt="Jerry avatar">
                             <div class="d-block mt-3 vote-arrows">
                                 <a class="vote-up" href="#"><i class="far fa-arrow-alt-circle-up"></i></a>
                                 <a class="vote-down" href="#"><i class="far fa-arrow-alt-circle-down"></i></a>
                             </div>
                         </div>
                         <div class="col">
-                            <a class="q-title" href="{{ path('app_question_show', { slug: 'pausing-a-spell'}) }}"><h2>Pausing a Spell</h2></a>
+                            <a class="q-title" href="{{ path('app_question_show', { slug: 'pausing-a-spell' }) }}"><h2>Pausing a Spell</h2></a>
                             <div class="q-display p-3">
                                 <i class="fa fa-quote-left mr-3"></i>
                                 <p class="d-inline">I mastered the floating card, but now how do I get it back to the ground?</p>
@@ -63,7 +63,7 @@
                         </div>
                     </div>
                 </div>
-                <a class="answer-link" href="#" style="color: #fff;">
+                <a class="answer-link" href="{{ path('app_question_show', { slug: 'pausing-a-spell' }) }}" style="color: #fff;">
                     <p class="q-display-response text-center p-3">
                         <i class="fa fa-magic magic-wand"></i> 15 answers
                     </p>
