--- a/templates/question/show.html.twig
+++ b/templates/question/show.html.twig
@@ -11,16 +11,18 @@
                     <div class="q-container-show p-4">
                         <div class="row">
                             <div class="col-2 text-center">
-                                <img src="{{ asset('images/tisha.png') }}" width="100" height="100" alt=""">
+                                <img src="{{ asset('images/tisha.png') }}" width="100" height="100"  alt="Tisha avatar">
                                 <div class="mt-3">
                                     <small>
                                         {% if question.askedAt %}
+                                            Asked <br>
                                             {{ question.askedAt|ago }}
                                         {% else %}
                                             (unpublished)
                                         {% endif %}
                                     </small>
-                                    <form action="{{ path('app_question_vote', {slug: question.slug}) }}" method="POST">
+
+                                    <form action="{{ path('app_question_vote', { slug: question.slug }) }}" method="POST">
                                         <div class="vote-arrows vote-arrows-alt flex-fill pt-2" style="min-width: 90px;">
                                             <button class="vote-up btn btn-link" name="direction" value="up"><i class="far fa-arrow-alt-circle-up"></i></button>
                                             <button class="vote-down btn btn-link" name="direction" value="down"><i class="far fa-arrow-alt-circle-down"></i></button>
@@ -44,36 +46,51 @@
         </div>
 
         <div class="d-flex justify-content-between my-4">
-            <h2 class="">Answers <span style="font-size:1.2rem;">({{ answers|length }})</span></h2>
+            <h2 class="">Answers <span style="font-size:1.2rem;">({{ question.approvedAnswers|length }})</span></h2>
             <button class="btn btn-sm btn-secondary">Submit an Answer</button>
         </div>
 
 
 
         <ul class="list-unstyled">
-            {% for answer in answers %}
+            {% for answer in question.approvedAnswers %}
                 <li class="mb-4">
-                    <div class="d-flex justify-content-center">
-                        <div class="mr-2 pt-2">
-                            <img src="{{ asset('images/tisha.png') }}" width="50" height="50">
+                    <div class="row">
+                        <div class="col-1">
+                            <img src="{{ asset('images/tisha.png') }}" width="50" height="50" alt="Tisha avatar">
                         </div>
-                        <div class="mr-3 pt-2">
-                            {{ answer|markdown }}
-                            <p>-- Mallory</p>
+                        <div class="col-9">
+                            {{ answer.content|markdown }}
+                            <p>-- {{ answer.username }}</p>
                         </div>
-                        <div class="vote-arrows flex-fill pt-2 js-vote-arrows" style="min-width: 90px;">
-                            <a class="vote-up" href="#" data-direction="up"><i class="far fa-arrow-alt-circle-up"></i></a>
-                            <a class="vote-down" href="#" data-direction="down"><i class="far fa-arrow-alt-circle-down"></i></a>
-                            <span>+ <span class="js-vote-total">6</span></span>
+                        <div class="col-2 text-end">
+                            <small>{{ answer.createdAt|date('Y-m-d') }}</small>
+                            <div
+                                    class="vote-arrows"
+                                    {{ stimulus_controller('answer-vote', {
+                                        url: path('answer_vote', {
+                                            id: answer.id
+                                        })
+                                    }) }}
+                            >
+                                <button
+                                        class="vote-up btn btn-link"
+                                        name="direction"
+                                        value="up"
+                                        {{ stimulus_action('answer-vote', 'clickVote') }}
+                                ><i class="far fa-arrow-alt-circle-up"></i></button>
+                                <button
+                                        class="vote-down btn btn-link"
+                                        name="direction"
+                                        value="down"
+                                        {{ stimulus_action('answer-vote', 'clickVote') }}
+                                ><i class="far fa-arrow-alt-circle-down"></i></button>
+                                <span>+ <span {{ stimulus_target('answer-vote', 'voteTotal') }}>{{ answer.votes }}</span></span>
+                            </div>
                         </div>
                     </div>
                 </li>
             {% endfor %}
         </ul>
     </div>
-{% endblock %}
-
-{% block javascripts %}
-    {{ parent() }}
-    <script src="{{ asset('js/question_show.js') }}"></script>
 {% endblock %}
