--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,23 +13,26 @@
     {% endblock %}
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light px-1" style="height: 60px;">
-    <a class="navbar-brand" href="{{ path('app_homepage') }}">
-        <p class="pl-2 d-inline font-weight-bold" style="color: #444;">
-            Cauldron Overflow</p>
-    </a>
-    <div class="collapse navbar-collapse">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-                <a class="nav-link" href="{{ path('app_popular_answers') }}">Answers</a>
 
-            </li>
-        </ul>
-    </div>
+<div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light px-1" style="height: 60px;">
+        <a class="navbar-brand" href="{{ path('app_homepage') }}">
+            <p class="pl-2 d-inline font-weight-bold" style="color: #444;">
+                Cauldron Overflow</p>
+        </a>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_popular_answers') }}">Answers</a>
 
-    <button class="btn btn-dark">Sign up</button>
-</nav>
+                </li>
+            </ul>
+        </div>
 
+        <a href="{{ path('app_login') }}" class="nav-link text-black-50">Log In</a>
+        <a href="#" class="btn btn-dark">Sign up</a>
+    </nav>
+</div>
 {% block body %}{% endblock %}
 <footer class="mt-5 p-3 text-center">
     Made with <i style="color: red;" class="fa fa-heart"></i> by the guys and gals at <a style="color: #444; text-decoration: underline;" href="https://symfonycasts.com">SymfonyCasts</a>
