--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,13 +24,48 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('app_popular_answers') }}">Answers</a>
-
                 </li>
+                {% if is_granted('ROLE_ADMIN') %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('admin_dashboard') }}">Admin</a>
+                    </li>
+                {% endif %}
             </ul>
         </div>
 
-        <a href="{{ path('app_login') }}" class="nav-link text-black-50">Log In</a>
-        <a href="#" class="btn btn-dark">Sign up</a>
+        {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+            <div class="dropdown">
+                <button
+                        class="dropdown-toggle btn"
+                        type="button"
+                        id="user-dropdown"
+                        data-bs-toggle="dropdown"
+                        aria-expanded="false"
+                >
+                    <img
+                            src="{{ app.user.avatarUri }}"
+                            alt="{{ app.user.displayName }} Avatar">
+                </button>
+                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="user-dropdown">
+                    {% if is_granted('IS_IMPERSONATOR') %}
+                        <li>
+                            <a class="dropdown-item" href="{{ path('app_homepage', {
+                                '_switch_user': '_exit'
+                            }) }}">Exit Impersonation</a>
+                        </li>
+                    {% endif %}
+                    <li>
+                        <a class="dropdown-item" href="{# {{ path('app_2fa_enable') }} #}">Enble 2fa</a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="{{ path('app_logout') }}">Log Out</a>
+                    </li>
+                </ul>
+            </div>
+        {% else %}
+            <a href="{{ path('app_login') }}" class="nav-link text-black-50">Log In</a>
+            <a href="{#  {{ path('app_register') }} #}" class="btn btn-dark">Sign up</a>
+        {% endif %}
     </nav>
 </div>
 {% block body %}{% endblock %}
