--- a/templates/question/homepage.html.twig
+++ b/templates/question/homepage.html.twig
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="row mb-3">
             <div class="col">
-                <button class="btn btn-question">Ask a Question</button>
+                <a href="" class="btn btn-question">Ask a Question</a>
             </div>
         </div>
         <div class="row">
@@ -21,7 +21,7 @@
                     <div class="q-container p-4">
                         <div class="row">
                             <div class="col-2 text-center">
-                                <img src="{{ asset('images/tisha.png') }}" width="100" height="100"  alt="Tisha avatar">
+                                <img src="{{ question.owner.avatarUri }}" width="100" height="100"  alt="{{ question.owner.displayName}} avatar">
                                 <div class="vote-arrows vote-arrows-alt flex-fill pt-2" style="min-width: 90px;">
                                     <span>{{ question.votesString}} votes</span>
                                 </div>
@@ -35,7 +35,7 @@
                                 <div class="q-display p-3">
                                     <i class="fa fa-quote-left mr-3"></i>
                                     <p class="d-inline">{{ question.question|markdown }}</p>
-                                    <p class="pt-4"><strong>--Tisha</strong></p>
+                                    <p class="pt-4"><strong>--{{ question.owner.displayName }}</strong></p>
                                 </div>
                             </div>
                         </div>
