Konczymy symfony4 casts formularze. Ostatnich pare lekcji zostało o formularzach

--- a/templates/article_admin/new.html.twig
+++ b/templates/article_admin/new.html.twig
@@ -1,4 +1,4 @@
-{% extends 'content_base.html.twig' %}
+{% extends 'article_admin/article_admin_base.html.twig' %}
 
 {% block body %}
     <h3 class="mt-2">Dodaj nowy artykuł</h3>
