--- a/templates/article_admin/edit.html.twig
+++ b/templates/article_admin/edit.html.twig
@@ -1,4 +1,4 @@
-{% extends 'content_base.html.twig' %}
+{% extends 'article_admin/article_admin_base.html.twig' %}
 
 {% block body %}
     <h3 class="mt-2">Edytuj ten artykuł</h1>
