--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,6 +1,18 @@
+{#  pokazany jest sposób, jak możemy odyfikowac szablon formularza #}
+
 {% extends 'base.html.twig' %}
+{%  form_theme registrationForm _self %}
 
 {% block title %}Register{% endblock %}
+
+{% block _user_registration_form_agreeTerms_row %}
+    <div class="checkbox mb-3">
+        {{ form_errors(form) }}
+        <label>
+            <input type="checkbox" name="{{ full_name }}" required> Agree to terms I for sure read
+        </label>
+    </div>
+{% endblock %}
 
 {% block body %}
     <div class="container">
@@ -9,9 +21,12 @@
                 <h3 class="mb-2">Register</h3>
 
                 {{ form_start(registrationForm) }}
-                {{ form_row(registrationForm.email) }}
+                {{ form_row(registrationForm.email, {
+                    attr: { placeholder: 'Email' }
+                }) }}
                 {{ form_row(registrationForm.plainPassword, {
-                    label: 'Password'
+                    label: 'Password',
+                    attr: { placeholder: 'Password' }
                 }) }}
                 {{ form_row(registrationForm.agreeTerms) }}
 
@@ -21,3 +36,5 @@
         </div>
     </div>
 {% endblock %}
+
+
