Skończony kurs webpacka, jestem w trakcie symtony 4 i Api token :)

--- a/templates/answer/_answer.html.twig
+++ b/templates/answer/_answer.html.twig
@@ -12,7 +12,7 @@
     {% endif %}
     <div class="row">
         <div class="col-1">
-            <img src="{{ asset('images/tisha.png') }}" width="50" height="50" alt="Tisha avatar">
+            <img src="{{ asset('build/images/tisha.png') }}" width="50" height="50" alt="Tisha avatar">
         </div>
         <div class="col-9">
             {{ answer.content|markdown }}
