--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -15,7 +15,7 @@
                 <div class="row spacepurplebg white">
                     <div class="col-md-2 no-pad">
                         <div class="user-image">
-                            <img src="{{ app.user.avatarUrl }}" class="img-responsive thumbnail">
+                            <img src="{{ asset('build/images/tisha.d57f1d43.png') }}" class="img-responsive thumbnail" style="max-width: 60px; max-height: 60px;"> {# {{ app.user.avatarUrl } #}
                         </div>
                     </div>
                     <div class="col-md-10 no-pad">
