--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -3,9 +3,10 @@
 {% block title %}Read: {{ article.title }}{% endblock %}
 
 {% block content_body %}
+    bbbbbbbbb show.html.twig
     <div class="row">
         <div class="col-sm-12">
-            <img class="show-article-img" src="{{ article.imagePath|imagine_filter('squared_thumbnail_medium') }}">
+            <img class="show-article-img" src="{{ asset('build/images/tisha.png') }}"> {# {{ article.imagePath|imagine_filter('squared_thumbnail_medium') }} #}
             <div class="show-article-title-container d-inline-block pl-3 align-middle">
                 <span class="show-article-title ">{{ article.title }}</span>
                 <br>
@@ -15,7 +16,10 @@
                 </span>
                 <span class="pl-2 article-details">
                     <span class="js-like-article-count">{{ article.heartCount }}</span>
-                    <a href="{{ path('article_toggle_heart', {slug: article.slug}) }}" class="fa fa-heart-o like-article js-like-article" title="Click to Like!"></a>
+                    <a href="{{ path('article_toggle_heart', {slug: article.slug}) }}"
+                       class="fa fa-heart-o like-article js-like-article"
+                       title="Click to Like!"
+                    ></a>
                 </span>
                 <span class="pl-2 article-details">
                     {% for tag in article.tags %}
@@ -28,7 +32,7 @@
     <div class="row">
         <div class="col-sm-12">
             <div class="article-text">
-                {{ article.content|cached_markdown }}
+                {{ article.content|markdown }}
             </div>
         </div>
     </div>
