--- a/templates/article_admin/article_admin_base.html.twig
+++ b/templates/article_admin/article_admin_base.html.twig
@@ -2,15 +2,17 @@
 
 {% block javascripts %}
     {{ parent() }}
-
+{#
     <script src="https://cdn.jsdelivr.net/autocomplete.js/0/autocomplete.jquery.min.js"></script>
-    <script src="{{ asset('js/algoria-autocomplete.js') }}"></script>
+    <script src="{{ asset('js/algolia-autocomplete.js') }}"></script>
+#}
 
-    <script src="{{ asset('js/admin_article_form.js') }}"></script>
-    <script src="{{ asset('js/admin_article_form.js') }}"></script>
+    {{ encore_entry_script_tags('admin_article_form') }}
 {% endblock %}
 
 
 {% block stylesheets %}
     {{ parent() }}
+
+    {{ encore_entry_link_tags('admin_article_form') }}
 {% endblock %}
