--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,7 +3,16 @@
 {% extends 'base.html.twig' %}
 {%  form_theme registrationForm _self %}
 
+
+{% block stylesheets %}
+    {{ parent() }}
+
+    {{ encore_entry_link_tags('account') }}
+{% endblock %}
+
+
 {% block title %}Register{% endblock %}
+
 
 {% block _user_registration_form_agreeTerms_row %}
     <div class="checkbox mb-3">
@@ -13,6 +22,7 @@
         </label>
     </div>
 {% endblock %}
+
 
 {% block body %}
     <div class="container">
