--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,5 +1,12 @@
 {% extends 'base.html.twig' %}
 {% block title %}Log In!{% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+
+    {{ encore_entry_link_tags('account') }}
+{% endblock %}
+
 {% block body %}
     <div class="container">
         <div class="row">
