uaktualniono do symfony 5.4

--- a/templates/answer/_answer.html.twig
+++ b/templates/answer/_answer.html.twig
@@ -15,7 +15,7 @@
             <img src="{{ asset('build/images/tisha.png') }}" width="50" height="50" alt="Tisha avatar">
         </div>
         <div class="col-9">
-            {{ answer.content|markdown }}
+            {{ answer.content }}
             <p>-- {{ answer.username }}</p>
         </div>
         <div class="col-2 text-end">
