--- a/templates/article/homepage.html.twig
+++ b/templates/article/homepage.html.twig
@@ -33,7 +33,7 @@
                             {% endfor %}
                             <br>
                             <span class="align-left article-details"><img class="article-author-img rounded-circle" src="{{ asset('build/images/alien-profile.png') }}"> {{ article.author }} </span>
-                            <span class="pl-5 article-details float-right"> {{ article.publishedAt ? article.publishedAt|ago }}</span>
+                            <span class="pl-5 article-details float-right"> {{ article.publishedAt ? article.publishedAt|date("m/d/Y") }}</span>
                         </div>
                     </a>
                 </div>
