--- a/templates/question/homepage.html.twig
+++ b/templates/question/homepage.html.twig
@@ -34,7 +34,7 @@
                                 <a class="q-title" href="{{ path('app_question_show', { slug: question.slug }) }}"><h2>{{ question.name }}</h2></a>
                                 <div class="q-display p-3">
                                     <i class="fa fa-quote-left mr-3"></i>
-                                    <p class="d-inline">{{ question.question|markdown }}</p>
+                                    <p class="d-inline">{{ question.question }}</p>
                                     <p class="pt-4"><strong>--{{ question.owner.displayName }}</strong></p>
                                 </div>
                             </div>
